RESOLVED FIXED54240
[Qt] Fix assert in QDeclarativeWebView
https://bugs.webkit.org/show_bug.cgi?id=54240
Summary [Qt] Fix assert in QDeclarativeWebView
Ademar Reis
Reported 2011-02-10 13:31:02 PST
From: http://bugreports.qt.nokia.com/browse/QTBUG-14278 In a debug build this will trigger an assert: import QtWebKit 1.0 WebView { width: 640 height: 480 WebView { } } Patch for webkit (based on the patch already submited to Qt) is on the way.
Attachments
patch (2.48 KB, patch)
2011-02-10 13:32 PST, Ademar Reis
no flags
Ademar Reis
Comment 1 2011-02-10 13:32:49 PST
WebKit Review Bot
Comment 2 2011-02-10 13:35:04 PST
Attachment 82036 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/qt/ChangeLog', u'Source/WebK..." exit_code: 1 Source/WebKit/qt/declarative/qdeclarativewebview.cpp:252: Boolean expressions that span multiple lines should have their operators on the left side of the line instead of the right side. [whitespace/operators] [4] Source/WebKit/qt/declarative/qdeclarativewebview.cpp:253: Boolean expressions that span multiple lines should have their operators on the left side of the line instead of the right side. [whitespace/operators] [4] Source/WebKit/qt/declarative/qdeclarativewebview.cpp:254: Boolean expressions that span multiple lines should have their operators on the left side of the line instead of the right side. [whitespace/operators] [4] Total errors found: 3 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3 2011-02-10 14:17:42 PST
Comment on attachment 82036 [details] patch Clearing flags on attachment: 82036 Committed r78269: <http://trac.webkit.org/changeset/78269>
WebKit Commit Bot
Comment 4 2011-02-10 14:17:47 PST
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 5 2011-02-14 12:07:46 PST
Revision r78269 cherry-picked into qtwebkit-2.1 with commit 96da807 <http://gitorious.org/webkit/qtwebkit/commit/96da807>
Ademar Reis
Comment 6 2011-02-17 06:20:50 PST
Revision r78269 cherry-picked into qtwebkit-2.0 with commit 61982c8 <http://gitorious.org/webkit/qtwebkit/commit/61982c8>
Note You need to log in before you can comment on or make changes to this bug.