2011-02-10  Ademar de Souza Reis Jr  <ademar.reis@openbossa.org>

Reviewed by Andreas Kling.

        [Qt] Fix assert in QDeclarativeWebView
        https://bugs.webkit.org/show_bug.cgi?id=54240

        As reported in:
        http://bugreports.qt.nokia.com/browse/QTBUG-14278

        Instantiating a QDeclarativeWebView twice will trigger an assertion
        when in debug mode.

        Original patch from Thomas Hartmann <Thomas.Hartmann@nokia.com>,
        reviewed (there) by Aaron Kennedy
        f532679ca11914b453e22342f2ae5e9f790ce47a

        * declarative/qdeclarativewebview.cpp:
        (QDeclarativeWebView::init):

Canonical link: https://commits.webkit.org/68280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78269 268f45cc-cd09-0410-ab3c-d52691b4dbfc